[package]
name = "advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
robotics_lib = {version ="0.1.21", registry = "kellnr"}
rip_worldgenerator = {version = "0.5.57", registry = "kellnr"}
rustici_planner = {version = "0.1.6", registry = "kellnr"}
bob_lib = {version = "0.1.3", registry = "kellnr"}
op_map = {version = "1.0.5", registry = "kellnr"}
recycle_by_ifrustrati = {version="0.1.2", registry = "kellnr"}
cargo_commandos_lucky = {version ="1.0.1", registry = "kellnr"}
rand = "0.8.5"
strum = "0.26.2"
serde = { version = "1.0.199", features = ["derive"] }
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"]}
ws = { package = "rocket_ws", version = "0.1.0" }
tokio = "1.37.0"
log = "0.4.20"
pmp_street_picasso = {version = "1.1.3", registry = "kellnr"}
oxagaudiotool = {version = "0.2.0", registry = "kellnr"}
serde_json = "1.0.116"
